hpa/deploy-php.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "php"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "php"
  template:
    metadata:
      labels:
        app: "php"
    spec:
      containers:
      - name: "phpapp"
        image: "eagle.example.com:5000/httpd:php"
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
#            memory: 256Mi
