hpa/service-metrics.yml
apiVersion: v1
kind: Service
metadata:
  name: metrics
  labels:
    app: metrics
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: metrics
