hpa/service-myapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    app: myapp
    strategy: recreate
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: http-metrics
    port: 9101
    targetPort: 9101
  selector:
    app: myapp
