hpa/service-php.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "php"
spec:
  ports:
  - name: "http"
    protocol: "TCP"
    port: 80
  selector:
    app: "php"
