hpa/ingress-php.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: php
spec:
  rules:
  - host: s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: php
          servicePort: http
