hpa/virtualservice-myapp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  hosts:
  - "*"
  gateways:
  - myapp
  http:
  - route:
    - destination:
        host: myapp
    fault:
      abort:
        percentage:
          value: 50.0
        httpStatus: 500
